k8s/01-nginx-ci.yaml
apiVersion: v1
kind: Service
metadata:
  name: ci-service
spec:
  selector:
    app: nginx 
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
