k8s/00-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  labels: 
    name: ingress-service
spec:
  rules:
    - http:
        paths:
          - path: "/admin"
            pathType: Prefix
            backend:
              service: 
                name: django-service
                port: 
                  number: 8000
          - path: "/"
            pathType: Prefix
            backend:
              service: 
                name: react-service
                port: 
                  number: 3000
